Added icon png to title

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/615998924738859008/jHloaG7a.png">
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/fora.css">
 
